Fix bug on observation on several object in a string

--- a/test.html
+++ b/test.html
@@ -19,7 +19,7 @@
 		<div ?html="html"></div>
 		<br>
 		<div><u>Test eval</u>:</div>
-		<div>?{cnt+(cnt*2)}</div>
+		<div>1 + (1 x 2) = ?{cnt+(cnt*2)}</div>
 		<br>
 		<div><u>Test loop for</u>:</div>
 		<div ?for="key,val in table">test for ?{key}: pepette ?{val}</div>
